TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "137825308956976" [label="Start"];
  "137825308956976" -> "137825308956832";
  "137825308956832" [label="Code"];
  "137825308956832" -> "137825308955056";
  "137825308955056" [label="Function"];
  "137825308955056" -> "137825308954288";
  "137825308955056" -> "137825308957600";
  "137825308955056" -> "137825308955632";
  "137825308954288" [label="main"];
  "137825308957600" [label="Parameters"];
  "137825308955632" [label="Code"];
  "137825308955632" -> "137825308955776";
  "137825308955632" -> "137825308956160";
  "137825308955632" -> "137825308959232";
  "137825308955776" [label="Scope"];
  "137825308955776" -> "137825308957024";
  "137825308957024" [label="Declaration"];
  "137825308957024" -> "137825308951744";
  "137825308957024" -> "137825308958464";
  "137825308951744" [label="x"];
  "137825308958464" [label="1"];
  "137825308956160" [label="Scope"];
  "137825308956160" -> "137825308951792";
  "137825308951792" [label="Declaration"];
  "137825308951792" -> "137825308952848";
  "137825308951792" -> "137825308958944";
  "137825308952848" [label="x"];
  "137825308958944" [label="2"];
  "137825308959232" [label="Return"];
  "137825308959232" -> "137825308959952";
  "137825308959952" [label="0"];
}
